[package]
name = "text_primitives"
version = "0.1.0"
description = "Fundamental text property types"
keywords = ["text", "style", "css"]
categories = ["graphics", "text"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

publish = false

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = []
bytemuck = ["dep:bytemuck"]

[dependencies]
bytemuck = { workspace = true, optional = true }

[lints]
workspace = true
