[package]
name = "composite_props_marker"
version = "0.1.0"
edition = "2021"

[dependencies]
icu = { version = "2", features = ["datagen"] }
icu_properties = { version = "2", features = ["datagen"] }
icu_collections = {version = "2", features=["databake", "serde"]}
icu_provider = "2"
yoke = { version = "0.8", features = ["derive"]}
zerofrom = "0.1"
serde = { version = "1", features = ["derive"] }
databake = { version = "0.2", features=["derive"] }

