[package]
name = "xtask"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Dev tooling for Parley"
keywords = ["testing"]
categories = ["testing", "graphics"]


[dependencies]
kompari = { git = "https://github.com/linebender/kompari.git", rev = "12c6c8e73b55ab0b4ca7e522377d221bbcf6acf7" }
kompari-tasks = { git = "https://github.com/linebender/kompari.git", rev = "12c6c8e73b55ab0b4ca7e522377d221bbcf6acf7" }
clap = { version = "4", features = ["derive"] }

[lints]
workspace = true
