[package]
name = "xtask_test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

description = "Create report via image_diff_review"
keywords = ["test"]
categories = ["graphics"]
readme = "README.md"

[dependencies]
kompari = { git = "https://github.com/linebender/kompari.git", rev = "f7843edb4a816f5e43c037361180347ec6bc190e", features = ["xtask-cli"] }
clap = { version = "4", features = ["derive"] }

[lints]
workspace = true
