[package]
name = "chrome_compare"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
parley = { workspace = true, default-features = true }
parley_dev = { workspace = true }

[lints]
workspace = true
