[package]
name = "swash_render"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
parley = { workspace = true, default-features = true }
skrifa = { workspace = true }
image = { version = "0.25.5", default-features = false, features = ["png"] }
swash = { workspace = true, default-features = true }

[lints]
workspace = true
