[package]
name = "tiny_skia_render_styled_text"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
parley = { workspace = true, default-features = true }
skrifa = { workspace = true }
tiny-skia = "0.11.4"

styled_text = { path = "../../styled_text", default-features = true }
styled_text_parley = { path = "../../styled_text_parley", default-features = true }
text_style = { path = "../../text_style", default-features = true }
text_style_resolve = { path = "../../text_style_resolve", default-features = true }

[lints]
workspace = true
