[package]
name = "vello_cpu_render"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
parley = { workspace = true, default-features = true }
parley_draw = { workspace = true, default-features = true, features = ["vello_cpu", "png"] }
vello_cpu = { workspace = true, default-features = true, features = ["png"] }
skrifa = { workspace = true }

[lints]
workspace = true

