[package]
name = "vello_cpu_render"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
parley = { workspace = true, default-features = true }
glifo = { workspace = true, default-features = false, features = ["std", "png", "vello_cpu"] }
parley_examples_common = { path = "../common" }
peniko = { workspace = true }
vello_cpu = { workspace = true, default-features = false, features = ["std", "png"] }
skrifa = { workspace = true }

[features]
default = ["png"]
png = []

[lints]
workspace = true
