[package]
name = "vello_editor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
vello = "0.5.0"
anyhow = "1.0.98"
pollster = "0.4.0"
ui-events = "0.1"
ui-events-winit = "0.1"
winit = "0.30.11"
parley = { workspace = true, default-features = true, features = ["accesskit"] }
peniko = { workspace = true }
accesskit = { workspace = true }
accesskit_winit = "0.29.0"

[lints]
workspace = true

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.11", features = ["android-native-activity"] }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
clipboard-rs = "0.2.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"
