[package]
name = "vello_editor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
vello = "0.8.0"
anyhow = "1.0.102"
pollster = "0.4.0"
ui-events = { git = "https://github.com/endoli/ui-events.git", rev = "5e840f0e39b412573aaec8debadd4be81c17d823", package = "ui-events", default-features = false, features = [
    "kurbo",
] }
ui-events-winit = { git = "https://github.com/endoli/ui-events.git", rev = "5e840f0e39b412573aaec8debadd4be81c17d823", package = "ui-events-winit", default-features = false }
winit = "0.30.13"
parley = { workspace = true, default-features = true, features = ["accesskit"] }
peniko = { workspace = true }
accesskit = { workspace = true }
accesskit_winit = "0.32.2"

[lints]
workspace = true

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.13", features = ["android-native-activity"] }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
clipboard-rs = "0.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"
